--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projectkpbaru">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Parcocoon">
+        <activity
+            android:name=".InfoGrooming"
+            android:exported="false" />
+        <activity
+            android:name=".InfoGrooming2"
+            android:exported="false" />
         <activity
             android:name=".ForgotPassActivity"
             android:exported="false" />
